// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picker basic rendering render dynamic content 1`] = `
<div>
  <button
    aria-activedescendant=""
    aria-expanded="false"
    aria-haspopup="listbox"
    class="form-control form-control-select form-control-select-secondary"
    role="combobox"
    tabindex="0"
    type="button"
  >
    Select an option
  </button>
</div>
`;

exports[`Picker basic rendering render dynamic content using native selector 1`] = `
<div>
  <select
    class="form-control form-control-select form-control-select-secondary"
  >
    <option
      index="0"
      value="Apple"
    >
      Apple
    </option>
    <option
      index="1"
      value="Banana"
    >
      Banana
    </option>
    <option
      index="2"
      value="Blueberry"
    >
      Blueberry
    </option>
  </select>
</div>
`;

exports[`Picker basic rendering render static content 1`] = `
<body>
  <div>
    <button
      aria-activedescendant=""
      aria-expanded="false"
      aria-haspopup="listbox"
      class="form-control form-control-select form-control-select-secondary"
      role="combobox"
      tabindex="0"
      type="button"
    >
      Select an option
    </button>
  </div>
  <div
    data-live-announcer="true"
    style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
  >
    <div
      aria-live="assertive"
      aria-relevant="additions"
      role="log"
    />
    <div
      aria-live="polite"
      aria-relevant="additions"
      role="log"
    />
  </div>
</body>
`;

exports[`Picker basic rendering render static content using native selector 1`] = `
<div>
  <select
    class="form-control form-control-select form-control-select-secondary"
  >
    <option
      index="0"
      value="apple"
    >
      Apple
    </option>
    <option
      index="1"
      value="banana"
    >
      Banana
    </option>
    <option
      index="2"
      value="blueberry"
    >
      Blueberry
    </option>
  </select>
</div>
`;

exports[`Picker basic rendering renders open component by default 1`] = `
<body>
  <div>
    <button
      aria-activedescendant="Apple"
      aria-controls="clay-id-12"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-owns="clay-id-12"
      class="form-control form-control-select form-control-select-secondary show"
      role="combobox"
      style=""
      tabindex="0"
      type="button"
    >
      Select an option
    </button>
  </div>
  <div
    data-live-announcer="true"
    style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
  >
    <div
      aria-live="assertive"
      aria-relevant="additions"
      role="log"
    />
    <div
      aria-live="polite"
      aria-relevant="additions"
      role="log"
    />
  </div>
  <div>
    <div
      class="dropdown-menu dropdown-menu-indicator-start dropdown-menu-select dropdown-menu-width-shrink show"
      role="presentation"
      style="max-width: none; min-width: 160px; left: -999px; top: -995px;"
    >
      <ul
        class="inline-scroller list-unstyled"
        id="clay-id-12"
        role="listbox"
        tabindex="-1"
      >
        <li
          role="presentation"
        >
          <button
            aria-selected="false"
            class="dropdown-item focus"
            id="Apple"
            index="0"
            role="option"
            tabindex="-1"
          >
            Apple
          </button>
        </li>
        <li
          role="presentation"
        >
          <button
            aria-selected="false"
            class="dropdown-item"
            id="Banana"
            index="1"
            role="option"
            tabindex="-1"
          >
            Banana
          </button>
        </li>
        <li
          role="presentation"
        >
          <button
            aria-selected="false"
            class="dropdown-item"
            id="Blueberry"
            index="2"
            role="option"
            tabindex="-1"
          >
            Blueberry
          </button>
        </li>
      </ul>
    </div>
  </div>
</body>
`;
